--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -32,6 +32,8 @@ theme: jekyll-theme-minimal
 plugins:
   - jekyll-feed
 
+include: ['_docs']
+  
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
